Correct overflow

--- a/static/style.css
+++ b/static/style.css
@@ -183,7 +183,7 @@ body {
   color: #333;
   flex-shrink: 1;
   flex-grow: 1;
-  overflow-x: scroll;
+  overflow-x: auto;
   text-align: left;
   height: 48px;
   white-space: nowrap;
